kubernetes/apps/network/zoraxy/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zoraxy
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/target: "internal.ewatkins.dev"
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  hostnames: ["zoraxy.ewatkins.dev"]
  rules:
    - backendRefs:
        - name: zoraxy
          port: 8000
